syntax = "proto3";

option csharp_namespace = "Persistify.Protos";

import "documents.proto";
import "types.proto";
import "auth.proto";
import "shared.proto";
import "monitor.proto";

service DocumentService {
  rpc Index (IndexDocumentRequestProto) returns (IndexDocumentResponseProto);
  rpc Search (SearchDocumentsRequestProto) returns (SearchDocumentsResponseProto);
  rpc ComplexSearch (ComplexSearchDocumentsRequestProto) returns (ComplexSearchDocumentsResponseProto);
  rpc Remove (RemoveDocumentRequestProto) returns (RemoveDocumentResponseProto);
}

service TypeService {
  rpc Create (CreateTypeRequestProto) returns (CreateTypeResponseProto);
  rpc List (ListTypesRequestProto) returns (ListTypesResponseProto);
//  rpc Delete (DeleteTypeRequestProto) returns (DeleteTypeResponseProto);
}

service AuthService {
  rpc Login (SignInRequestProto) returns (SignInResponseProto);
  rpc RefreshToken (RefreshTokenRequestProto) returns (RefreshTokenResponseProto);
  rpc CreateUser (CreateUserRequestProto) returns (CreateUserResponseProto);
  rpc DeleteUser (DeleteUserRequestProto) returns (DeleteUserResponseProto);
}

service MonitorService {
  rpc PipelineStream (EmptyProto) returns (stream PipelineEventProto);
  rpc PipelineInfos (EmptyProto) returns (PipelineInfosResponseProto);
}